<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="false"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:longClickable="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    tools:context="com.example.keepupv1.HomeActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/news_feed_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/news"
        android:textSize="12pt" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingTop="25dp" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsfeed_item_header_post"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="7pt" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/newsfeed_item_content_post"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#666"
            android:textSize="6pt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingTop="25dp" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsfeed_item_header_announcement"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="7pt" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/newsfeed_item_content_announcement"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#666"
            android:textSize="6pt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/table_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingTop="25dp" >

        <TextView
            android:id="@+id/row_header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsfeed_item_header_postOnYours"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#111111"
            android:textSize="7pt" />

        <TextView
            android:id="@+id/row_content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/newsfeed_item_content_postOnYours"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#666"
            android:textSize="6pt" />

    </LinearLayout>

</LinearLayout>