<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.keepup.activities.UnitsActivity" >

    <LinearLayout
        android:id="@+id/unit_listing_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5pt" >

        <TextView
            android:id="@+id/unit_listing_keepingup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keeping_up_with"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/unit_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/unit_count"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/keepup_darkblue_headings" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2" >

        <LinearLayout
            android:id="@+id/unit_listing_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/select_units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickAddRemoveUnits"
        android:padding="5dip"
        android:text="@string/add_remove_units" />

</LinearLayout>
