<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_group_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.keepup.activities.CreateGroupActivity"
    tools:ignore="MergeRootFrame" >
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80pt"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:layout_marginBottom="20pt"
        android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp">

        <LinearLayout
            android:id="@+id/users_to_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/createGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="createGroup"
        android:text="@string/create_group" />

    <TextView
        android:id="@+id/username_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/container"
        android:layout_centerHorizontal="true"
        android:text="@string/current_members_added"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/group_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add"
        android:layout_alignRight="@+id/createGroup"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/group_desc" />

    <TextView
        android:id="@+id/group_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add"
        android:layout_alignBottom="@+id/add"
        android:layout_alignLeft="@+id/container"
        android:text="@string/add_group_members"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/newGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/create_group" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username_caption"
        android:layout_toRightOf="@+id/group_description"
        android:clickable="true"
        android:onClick="clickAddRemoveUsers"
        android:text="@string/add" />

</RelativeLayout>
